# scheme2hack

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cpp.hint
res/: programm.scheme
src/: CMakeLists.txt  parser.h  scanner.cpp  scanner.h  scheme2hack.cpp
test/: parserTest.cpp  scannerTest.cpp
